cleaned up a bunch of code and have implemented functionality up to a single match